# riscv-translator

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  Makefile  README.md  benchmarks.csv  pyproject.toml
csrc/: bench_ssw.c
docs/riscv-reference/: reference.md
highway/hwy/: x86_cpuid.h
highway_port/: Makefile  ssw.h  ssw_hwy.cpp
initial_code/: Makefile  main.c  ssw.c  ssw.h
naive/code/: main.c  ssw.c  ssw.h
src/: benchmark.py  check.py  config.py  diff_utils.py  fitness.py  graph.py  llm_types.py  llm_utils.py  logger.py  prompts.py  repair.py  search_replace.py  validators.py  widen.py  widen_prompts.py
tests/: conftest.py  test_benchmark.py  test_diff_utils.py  test_integration_ssh.py  test_llm_search_replace.py  test_llm_utils.py  test_repair.py  test_search_replace.py  test_ssh_tunnel_llm.py  test_widen.py
translations/sequence-alignment/: LICENSE  change.md  main.c  sse2rvv.h  ssw.c  ssw.h
translations/sequence-alignment-widened/: LICENSE  benchmark.txt  benchmark_100k.txt  benchmark_10k.txt  benchmark_1M.txt  change.md  main.c  ssw.c  ssw.h
translations/sequence-alignment-widened-auto/: LICENSE  main.c  ssw.c  ssw.h
